# xrpl_zkbridge_prover

./: README.md
ecdsa_gnark/: ecdsa_test.go  go.mod  go.sum  main.go
ecdsa_gnark/test_files/: input_35.json  input_5.json
ecdsa_gnark/test_files/utils/: vk.txt
ecdsa_nova/: Cargo.toml  circom_input.json  proof  test_signature_ver.py
ecdsa_nova/src/: main.rs  main__.rs
ecdsa_nova/src/testing_files/: input_data.json
ecdsa_nova/src/testing_files/verify_cpp/: verify
ecdsa_nova_verifier/: Cargo.toml
ecdsa_nova_verifier/src/: main.rs  proof
testing_nova/: Cargo.toml  test_signature_ver.js  test_signature_ver.py
testing_nova/src/: main.rs
testing_nova/src/testing_files/: verify.circom
testing_nova/src/testing_files2/: toy.r1cs
testing_nova/src/testing_files2/toy_js/: toy.wasm
