[package]
name = "testing_nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = "0.5.0"
pasta_curves = "0.5"
nova-snark = "0.23.0"
serde_json = "1.0.85"
flate2 = "1.0.28"
bincode = "1.3.3"
